2009-09-29  Jackson Harper  <jackson@ximian.com>

	* BindingExpressionBase.cs: Implement indexed property paths. r: spouliot

2009-08-05  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: When a binding has been applied to
	  the DataContext property, we need to use the DataContext of
	  the parent element.

2009-07-29  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: If a two way binding is attached
	  to TextBox.Text we should not update the source while the
	  textbox has focus.

2009-06-30  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: OneTime bindings can be
	  invalidated and they do reflect the new value.

2009-06-23  Alan McGovern  <amcgovern@novell.com>

	* Binding.cs: Don't null check value before using it, we
	  should throw a nullref if it's null.

2009-05-20  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: DataBinding and ManagedXamlLoader
	  use exactly the same type conversion as Styles and
	  ObjectKeyFrames - so merge both of them to use
	  MoonlightTypeConverter. This also fixes several
	  typeconversion related databinding issues.

2009-05-19  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: Handle invalid values returned
	  from IValueConverters properly.

2009-05-15  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: Properly handle exceptions when
	  updating the source in a 2 way binding. Raise the
	  BindingValidationError event in the right place.

2009-05-13  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: If we have a property path like
	  "A.B.C" and the object 'B' is null, we should bail out with
	  failure.

2009-05-03  Chris Toshok  <toshok@ximian.com>

	* BindingExpressionBase.cs rename Updating/updating to
	UpdatingSource/updatingSource to better communicate what it means,
	and make a couple of properties internal instead of private (they
	weren't used anywhere else anyway.)